# libgq-gconf

./: LICENSE  README  autogen.sh  configure.ac
debian/: changelog  control  libgq-gconf-dev.install  libgq-gconf0.install  maemo-optify  rules
gconf/: Makefile.am  gq-gconf.pc.in  test-gconf.cpp
